fixed overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -13,7 +13,7 @@
 body {
 	box-sizing: border-box;
 	background-color: #607d8b;
-	overflow: hidden;
+	// overflow: hidden;
 	color: white;
 
 }
